# carpetgen

./: .gitignore  Cargo.toml  common_deps.nix  frontend.nix  package.json  shell.nix  webpack.config.js
nix/: sources.json
src/: main.rs  routes.rs
src/frontend/: index.js  util.js
src/frontend/components/: App.vue  AreaPicker.vue  Map.vue  PickerResults.vue
src/frontend/styles/: area-picker.scss  main.scss
static/: index.html
