[package]
name = "carpetgen"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3.3"
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0.104"
serde_json = "1.0.48"
actix-files = "0.2.1"
